tests/frontend_tests/error_bad_identifier.c
int main() {
  // error: unrecognized token at '1identifier'
  int 1identifier;
}
